--- a/Summaries/presentation.tex
+++ b/Summaries/presentation.tex
@@ -112,9 +112,18 @@ One effective approach is local filtering (LocalDeblur), which adaptively enhanc
 
 \end{tikzpicture}
 
+
 \end{frame}
 
 
+
+\begin{frame}
+\frametitle{Checklist}
+\begin{itemize}
+ \item Hem group?
+ \item Overlap/clash $\alpha$-subunit?
+\end{itemize}
+\end{frame}
 \begin{comment}
 
 
